assets/css/style.css
* {
    border: none;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid red; */
}

body {
    color: black;
    font-family: Montserrat, Arial, sans-serif;
    font-weight: 300;
}

h1 {
    color: black;
    font-family: Open Sans, sans-serif;
}

h2, h3 {
    color: white;
    font-family: Open Sans, Arial, sans-serif;  
}

/* Header section */

.header-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-inline: auto;
    text-align: center;
}

.logo {
    width: 100%;
    font-size: 150%;
    justify-content: center;
    padding: 5%;
}

.menu {
    width: 100%;
    justify-content: center;
    padding: 5%;
    /* display: inline-block; 
    text-align: left; */
}

.menu li {
    list-style-type: none;
    /* margin-right: 50px; */
    display: inline-block; 
    text-align: left;
}

.nav a {
 margin-right: 5px;
 color: black;
}

.active {
    color: gray;
    text-decoration: none;
}

/* Index page - Hero image section */

.section-wrapper {
    display: flex;
    width: 100%;
    flex-direction: column;
    width: 100%;
    text-align: center;
}

.hero-image {
    background: url(../images/hero-image-medium.jpg) no-repeat center center;
    height: 400px;
    overflow: hidden;
    width: 100%;
    padding: 5%;
}

.hero-image h3 {
    font-style: italic;
    margin-top: 3%;
    font-size: 80%;
}

/* Index page - Services Section */

.services {
    color: black;
    /* display: flex; */
    justify-content: space-evenly;
}

.services div {
    line-height: 1.3;
    margin: 10px;
    text-align: center;
    padding-top: 0;
}

.services h2 {
    color: black;
}

.services p {
    padding-top: 10px;
}

/* About Page - Who Section */

.about-wrapper {
    display: flex;
    /* width: 90%; */
    flex-direction: column;
    text-align: center;
    background-color: #82263e;
    color: white;
    justify-content: center;
}

.about-text {
    width: 100%;
    text-align: center;
    padding: 5%;
}

.about-text p {
    /* justify-content: right; */
    line-height: 1.4;
    margin-top: 2%;
}

/* .about-text {
    width: 50%;
    text-align: justify;
} */

#about-us-img {
    width: 90%;
    padding: 5%;
}

/* About Page - Location Section */

#location-wrapper {
    background-color: white;
    color: black;
}

.location-text {
    width: 100%;
    text-align: center;
    padding: 5%;
}

.location-text h2 {
    color: black;
    justify-content: left;
}

.location-text p {
    line-height: 1.4;
    margin-top: 2%;
}

.map-responsive {
    overflow: hidden;
    /* padding-bottom: 5%; */
    position: relative;
}

.map-responsive iframe {
    /* left:0;
    top:0; */
    /* position: sticky; */
    /* float: right; */
    /* margin-right: 12%; */
    height: 300px;
    width: 100%;
}

/* Resources page */

.section-wrapper-resources {
    display: flex;
    width: 100%;
    flex-direction: column;
    width: 100%;
    text-align: center;
    background-color: #82263e;
    color: white;
}

.resources-text {
    width: 100%;
    text-align: center;
    padding: 5%;
}

.resources-text p {
    line-height: 1.4;
    margin-top: 2%;
}

.resources-list {
    list-style-type: circle;

    width: 100%;
    text-align: center;
    padding: 5%;

    line-height: 1.4;
    margin-top: 2%;
}

/* .resources-list a:link {
    color: red;
    text-decoration: solid;
} */

/* Contact page  - Contact form section*/

.contact-form {
    background-color: #82263e;
    color: white;
}

.text-input {
    background: transparent;
    color: #fafafa;
    width: 100%;
    height: 25px;
    margin: 5px 5px 20px 0px;
    border: 1px solid grey;
    border-radius: 5px;
}

.text-input:hover {
    border-color: black;
}

.submit-button {
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 5px;
    padding: 10px 15px;
    font-size: 100%;
    background-color: grey;
    color: #fafafa;
}

.submit-button:hover {
    background-color: white;
    color: grey;
}

/* Contact page  - Contact Us section*/

.contact-us {
    display: flex;
    /* width: 100%; */
    flex-direction: column;
    text-align: center;
}

.contact-us h2 {
    color: black;
    width: 100%;
    text-align: center;
    padding: 5%;
}

.contact-us h3 {
    color: black;
}

.contact-us-text {
    width: 100%;
    text-align: center;
    padding: 5%;
}

.contact-us-text p {
    line-height: 1.4;
    margin-top: 2%;
}

/* Footer */

.footer-wrapper {
    display: flex;
    background-color: gray;
    height: 60px;
    text-align: center;
    /* position: fixed; */
    justify-content: space-evenly;
    width: 100%;
   
    left: 0;
    bottom: 0;

    padding-top: 12px;
}

.footer-wrapper ul {
    display: flex;
    font-size: 200%;
    justify-content: space-evenly;
    list-style-type: none;
    /* margin: auto 30%; */
}

.footer-wrapper i {
    color: black;
    margin-inline: 10px;
}

.footer-wrapper i:hover {
    color: #82263e;
    text-decoration: underline;
} 

